# rhai-analyzer

./: Cargo.toml  README.md  RHAI_TOML.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  vscode-package.yml
clients/jetbrains/: README.md
clients/neovim/: README.md
clients/vscode/: .gitignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
clients/vscode/scripts/: build-extension.mjs  clean.mjs  package-extension.mjs  prepare-server.mjs  vscode-prepublish.mjs
clients/vscode/snippets/: rhai.json
clients/vscode/src/: commands.ts  config.ts  extension.ts  serverPath.ts
clients/vscode/syntaxes/: rhai.tmLanguage.json
crates/rhai-db/: Cargo.toml  README.md
crates/rhai-db/src/: change.rs  db.rs  infer.rs  lib.rs  overload.rs  project.rs  tests.rs  types.rs  workspace.rs
crates/rhai-db/src/builtin/: mod.rs  semantic_keys.rs  semantics.rs  topics.rs
crates/rhai-db/src/db/: comment_directives.rs  diagnostics.rs  imports.rs  mod.rs  navigation.rs  query.rs  query_support.rs  rebuild.rs  rename.rs  snapshot.rs
crates/rhai-db/src/infer/: calls.rs  exprs.rs  generics.rs  helpers.rs  loops.rs  mod.rs  objects.rs  propagation.rs
crates/rhai-db/src/tests/: inference_basic.rs  inference_cross_file.rs  inference_flow.rs  methods.rs  mod.rs  queries.rs  snapshot.rs  workspace.rs
crates/rhai-fmt/: Cargo.toml  README.md
crates/rhai-fmt/src/: cli.rs  config.rs  file_config.rs  formatter.rs  lib.rs  tests.rs  types.rs
crates/rhai-fmt/src/formatter/: mod.rs
crates/rhai-fmt/src/tests/: config.rs  document.rs  guarantees.rs  layout.rs  mod.rs  range.rs  support.rs  trivia.rs
crates/rhai-hir/: Cargo.toml  README.md
crates/rhai-hir/src/: diagnostics.rs  docs.rs  indexing.rs  lib.rs  lowering.rs  model.rs  query.rs  rename.rs  tests.rs  ty.rs
crates/rhai-hir/src/diagnostics/: control_flow.rs  docs.rs  exports.rs  imports.rs  mod.rs  names.rs  unused.rs
crates/rhai-hir/src/indexing/: mod.rs  modules.rs  symbols.rs
crates/rhai-hir/src/lowering/: calls.rs  ctx.rs  exprs.rs  flow.rs  mod.rs  (+3 more)
crates/rhai-icon/: Cargo.toml
crates/rhai-icon/src/: main.rs
crates/rhai-ide/: Cargo.toml  README.md
crates/rhai-ide/src/: analysis.rs  assists.rs  change.rs  completion.rs  convert.rs  diagnostics.rs  hover.rs  imports.rs  lib.rs  rename.rs  signature_help.rs  tests.rs  types.rs
crates/rhai-lsp/: Cargo.toml  README.md
crates/rhai-lsp/src/: dispatch.rs  lib.rs  main.rs  protocol.rs  runtime.rs  server.rs  state.rs
crates/rhai-lsp/src/handlers/: code_actions.rs  diagnostics.rs  mod.rs  queries.rs
crates/rhai-lsp/src/protocol/: completion.rs  diagnostics.rs  hover.rs  mod.rs  symbols.rs  tests.rs  text.rs
crates/rhai-lsp/src/runtime/: event_loop.rs  logging.rs  notifications.rs  progress.rs  requests.rs  stdio.rs  util.rs
crates/rhai-lsp/src/tests/: code_actions.rs  diagnostics.rs  mod.rs  queries.rs
crates/rhai-lsp/src/tests/queries/: capabilities.rs  code_actions.rs  formatting.rs  language_features.rs  mod.rs  workspace.rs
crates/rhai-lsp/src/tests/queries/language_features/: completion.rs  inlay_hints.rs  mod.rs  navigation.rs  rename.rs  semantic_tokens.rs
crates/rhai-lsp/src/tests/queries/workspace/: mod.rs  navigation.rs  preload.rs  rename.rs  symbols.rs
crates/rhai-project/: Cargo.toml
crates/rhai-project/src/: lib.rs
crates/rhai-syntax/: Cargo.toml  README.md
crates/rhai-syntax/src/: ast.rs  directives.rs  lexer.rs  lib.rs  parser.rs  syntax.rs  trivia.rs
crates/rhai-vfs/: Cargo.toml
crates/rhai-vfs/src/: lib.rs  path.rs
scripts/: set-version.mjs
(+287 files in other folders)
