[workspace]
members = [
    "crates/rhai-db",
    "crates/rhai-fmt",
    "crates/rhai-hir",
    "crates/rhai-ide",
    "crates/rhai-lsp",
    "crates/rhai-project",
    "crates/rhai-syntax",
    "crates/rhai-vfs",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
rhai-db = { path = "crates/rhai-db" }
rhai-fmt = { path = "crates/rhai-fmt" }
rhai-hir = { path = "crates/rhai-hir" }
rhai-ide = { path = "crates/rhai-ide" }
rhai-lsp = { path = "crates/rhai-lsp" }
rhai-project = { path = "crates/rhai-project" }
rhai-syntax = { path = "crates/rhai-syntax" }
rhai-vfs = { path = "crates/rhai-vfs" }

anyhow = "1.0"
lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rowan = "0.16"
text-size = "1.1"
thiserror = "2.0"
tracing = "0.1"
