[package]
name = "rhai-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
rhai-db.workspace = true
rhai-fmt.workspace = true
rhai-hir.workspace = true
rhai-ide.workspace = true
rhai-project.workspace = true
rhai-syntax.workspace = true
rhai-vfs.workspace = true
